--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,13 @@
 .env.test.local
 .env.production.local
 
+.idea/demo.iml
+.idea/inspectionProfiles/Project_Default.xml
+.idea/misc.xml
+.idea/modules.xml
+.idea/vcs.xml
+package-lock.json
+
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
